eip.tf
resource "aws_eip" "eip"  {
	vpc  = true
	tags = {
		Name = "MYeip"
	}
	depends_on = [
		
		aws_route_table_association.Unity1
	]
}
