public_subnet.tf
resource "aws_subnet" "publicsubnet" {
	vpc_id     				= aws_vpc.vpc.id
	cidr_block 				= "10.0.0.0/24"
	map_public_ip_on_launch = "true"
	availability_zone 		= "us-east-1a"

	tags = {
		Name = "public-subnet"
	}
	depends_on = [
		aws_vpc.vpc,
		aws_internet_gateway.gateway
	]
}
